clean up & final

--- a/login.html
+++ b/login.html
@@ -3,7 +3,6 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="../../assets/img/favicon.ico">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
     <title>Login - Satang</title>
@@ -24,21 +23,6 @@
 </head>
 <body>
 
-<nav class="navbar navbar-transparent navbar-absolute">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-example-2">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Satang</a>
-        </div>
-
-    </div>
-</nav>
-
 
 <div class="wrapper wrapper-full-page">
     <div class="full-page login-page" data-color="azure">
@@ -52,7 +36,8 @@
 
                             <!--   if you want to have the card without animation please remove the ".card-hidden" class   -->
                             <div class="card">
-                                <div class="header text-center">Login</div>
+                                <div class="header text-center">Satang Login
+                                    </div>
                                 <div class="content">
                                     <div class="form-group">
                                         <label>Email address</label>
@@ -106,7 +91,7 @@
                         </li>
                     </ul>
                 </nav>
-                <p class="copyright pull-right">
+                <p class="copyright pull-right" style="color: white">
                     &copy; 2016 <a href="http://www.satang.co">Satang</a> eiei
                 </p>
             </div>
