--- a/setting.html
+++ b/setting.html
@@ -29,7 +29,8 @@
 
         <div class="logo">
             <a href="http://www.creative-tim.com" class="logo-text">
-                Satang
+                <img src="assets/img/St-Horizontal-Logo-2.png" style="height: 30px"/>
+
             </a>
         </div>
         <div class="logo logo-mini">
@@ -179,7 +180,7 @@
                     </ul>
                 </nav>
                 <p class="copyright pull-right">
-                    &copy; 2016 <a href="http://www.satang.co">Satang</a> eiei
+                    &copy; 2016 <a href="http://www.satang.co">Satang Merchant</a>
                 </p>
             </div>
         </footer>
