--- a/login.html
+++ b/login.html
@@ -36,8 +36,8 @@
 
                             <!--   if you want to have the card without animation please remove the ".card-hidden" class   -->
                             <div class="card">
-                                <div class="header text-center">Satang Login
-                                    </div>
+                                <div class="header text-center">
+                                    <img src="assets/img/St-Horizontal-Logo-2.png" style="height: 50px"/></div>
                                 <div class="content">
                                     <div class="form-group">
                                         <label>Email address</label>
@@ -92,7 +92,7 @@
                     </ul>
                 </nav>
                 <p class="copyright pull-right" style="color: white">
-                    &copy; 2016 <a href="http://www.satang.co">Satang</a> eiei
+                    &copy; 2016 <a href="http://www.satang.co">Satang Merchant</a>
                 </p>
             </div>
         </footer>
