--- a/product.html
+++ b/product.html
@@ -31,7 +31,7 @@
 
         <div class="logo">
             <a href="http://www.creative-tim.com" class="logo-text">
-                Satang
+                <img src="assets/img/St-Horizontal-Logo-2.png" style="height: 30px"/>
             </a>
         </div>
         <div class="logo logo-mini">
@@ -267,7 +267,7 @@
                     </ul>
                 </nav>
                 <p class="copyright pull-right">
-                    &copy; 2016 <a href="http://www.satang.co">Satang</a> eiei
+                    &copy; 2016 <a href="http://www.satang.co">Satang Merchant</a>
                 </p>
             </div>
         </footer>
