--- a/login.html
+++ b/login.html
@@ -32,12 +32,16 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 col-sm-6 col-md-offset-4 col-sm-offset-3">
-                        <form method="#" action="#">
+                         <form method="#" action="#">
 
                             <!--   if you want to have the card without animation please remove the ".card-hidden" class   -->
                             <div class="card">
+
                                 <div class="header text-center">
-                                    <img src="assets/img/St-Horizontal-Logo-2.png" style="height: 50px"/></div>
+                                    <img src="assets/img/St-Horizontal-Logo-2.png" style="height: 50px;margin: 0  auto;margin-bottom: 20px; " class="text-center img-responsive"/>
+
+                                    <h4 style="margin: 0 0 0;">Satang Merchant</h4>
+                                </div>
                                 <div class="content">
                                     <div class="form-group">
                                         <label>Email address</label>
