--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
                             <div class="card">
 
                                 <div class="header text-center">
-                                    <img src="assets/img/St-Horizontal-Logo-2.png" style="height: 50px;margin: 0  auto;margin-bottom: 20px; " class="text-center img-responsive"/>
+                                    <img src="assets/img/logo6.png" style="height: 50px;margin: 0  auto;margin-bottom: 20px; "/>
 
                                     <h4 style="margin: 0 0 0;">Satang Merchant</h4>
                                 </div>
