--- a/login.html
+++ b/login.html
@@ -35,12 +35,12 @@
                          <form method="#" action="#">
 
                             <!--   if you want to have the card without animation please remove the ".card-hidden" class   -->
-                            <div class="card">
+                            <div class="card" style="padding: 10px">
 
                                 <div class="header text-center">
-                                    <img src="assets/img/logo6.png" style="height: 50px;margin: 0  auto;margin-bottom: 20px; "/>
+                                    <img src="assets/img/logo6.png" style="height: 120px;margin: 0  auto;margin-bottom: 20px;margin-top: 15px "/>
 
-                                    <h4 style="margin: 0 0 0;">Satang Merchant</h4>
+                                    <h4 style="margin:  0 0;margin-top: 15px">Satang Merchant</h4>
                                 </div>
                                 <div class="content">
                                     <div class="form-group">
@@ -58,7 +58,7 @@
                                     </div>
                                 </div>
                                 <div class="footer text-center">
-                                    <button type="submit" class="btn btn-fill btn-warning btn-wd">Login</button>
+                                    <button type="submit" class="btn btn-block btn-fill btn-warning btn-wd" style="min-height: 45px">Login</button>
                                 </div>
                             </div>
 
